test/integration/bad/function-signatures/overloading/define_extern1.stan
functions {
  @extern real foo(int x, int y);
  real foo(int x, int y){
    return 1.0;
  }

}
